currentReward, circulatingSupplyAsh endpoints added
